k8s/namespace.yml
apiVersion:v1
kind: Namespace
metadata:
  name: a######-leapCloud
  labels:
    environment: development
    team: <team-name>
