k8s/fmts-nodejs-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fmts-nodejs-lb
spec:
  type: LoadBalancer
  selector:
    app: fmts-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
