k8s/frontend-sbc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-lb
spec:
  type: LoadBalancer
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
