k8s/midtier-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mid-nodejs-lb
spec:
  type: LoadBalancer
  selector:
    app: mid-nodejs
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
