k8s/spring-app-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-lb
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
